--- a/src/main/resources/cloud/Messages.properties
+++ b/src/main/resources/cloud/Messages.properties
@@ -1,1 +1,2 @@
-VSPhereCloudBuilder.pathForMe=hello
+VSphereCloudKiller.build.delete=Delete VM by name (DESTRUCTIVE)
+VSphereCloudStarter.build.start=Create a VM from template
