--- a/src/main/resources/org/jenkinsci/plugins/vsphere/builders/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/vsphere/builders/Messages.properties
@@ -1,3 +1,4 @@
 vm.title.Destroyer=Delete VM by name (DESTRUCTIVE)
-vm.title.Starter=Create a VM from template
-vm.title.MarkTemplate=Convert a VM to a template
+vm.title.Starter=Create VM from template
+vm.title.MarkTemplate=Convert VM to a template
+vm.title.MarkVM=Convert template to a VM
