--- a/src/main/resources/org/jenkinsci/plugins/vsphere/tools/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/vsphere/tools/Messages.properties
@@ -1,6 +1,9 @@
 VSphere.pool.build=Build
 VSphere.pool.default=Build
 
+VSphere.host.clusterA=ClusterA
+VSphere.host.default=ClusterA
+
 VSphere.build.title=vSphere
 
 VSphereLogger.title=vSphere Tools
