--- a/src/main/resources/org/jenkinsci/plugins/vsphere/tools/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/vsphere/tools/Messages.properties
@@ -7,3 +7,6 @@ VSphere.host.default=ClusterA
 VSphere.build.title=vSphere
 
 VSphereLogger.title=vSphere Tools
+
+VSphere.ip.max.tries=40
+VSphere.ip.seconds=5
